remove social network icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
-            {% include svg-icons.html %}
+            Footer
           </footer>
         </div>
       </div>
