replace svg icons with simple navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,15 @@
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
-            Footer
+            <a href="{{ site.baseurl }}/">Home</a>
+            <i class="little-spacer"></i>
+            <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
+            <i class="little-spacer"></i>
+            <a href="{{ site.baseurl }}/search">Search</a>
+            <i class="little-spacer"></i>
+            <a href="{{ site.baseurl }}/about">About</a>
+            <i class="little-spacer"></i>
+            <a href="{{ site.baseurl }}/archive">Archive</a>
           </footer>
         </div>
       </div>
