--- a/assets/style.scss
+++ b/assets/style.scss
@@ -549,6 +549,12 @@ Modules - reusable parts of our design
   text-align: center;
 }
 
+.little-spacer {
+  display: inline-block;
+  width: 12px;
+  height: 1px;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 //@import "highlights";
