--- a/assets/style.scss
+++ b/assets/style.scss
@@ -24,7 +24,7 @@ body {
   color: #404040;
   line-height: 1.7;
   font-weight: 400;
-  font-size: 1.1rem;
+  font-size: 1.25rem;
   height: 100%;
 }
 
@@ -51,14 +51,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 1.6em;
+  font-size: 2em;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 1.4em;
+  font-size: 1.6em;
 }
 
 @media (min-width: 48rem){
@@ -74,16 +74,16 @@ h2 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.3em;
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 1em;
   color: #222;
 }
 
 p {
-  margin: 15px 0;
+  margin: 1em 0;
 }
 
 table {
@@ -103,17 +103,17 @@ table tr:nth-child(2n) {
 
 table tr th {
 	font-weight: bold;
-	border: 1px solid #cccccc;
+	border: 0.05em solid #cccccc;
 	text-align: left;
 	margin: 0;
-	padding: 6px 13px;
+	padding: 0.4em 0.8em;
 }
 
 table tr td {
-	border: 1px solid #cccccc;
+	border: 0.05em solid #cccccc;
 	text-align: left;
 	margin: 0;
-	padding: 6px 13px;
+	padding: 0.4em 0.8em;
 }
 
 table tr th :first-child,
@@ -125,13 +125,6 @@ table tr th :last-child,
 table tr td :last-child {
 	margin-bottom: 0;
 }
-
-/*.detailed .entry p:first-of-type:first-letter {
-    float: left;
-    margin: 0.13em 0.05em 0 -0.05em;
-    font-size: 3.333em;
-    line-height: 0.75em;
-}*/
 
 #search-container {
   text-align: center;
@@ -184,8 +177,8 @@ a {
 }
 
 ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
+  margin: 1em 0;
+  padding-left: 2em;
 }
 
 ul {
@@ -263,12 +256,12 @@ p > img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 25px;
+  margin-bottom: 1.5em;
 }
 
 .masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  padding: 1.2em 0;
+  border-bottom: 0.05em solid $lightGray;
 
   @include mobile {
     text-align: center;
@@ -277,9 +270,9 @@ p > img {
 
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
+  width: 4em;
+  height: 4em;
+  margin-right: 1em;
 
   @include mobile {
     float: none;
@@ -288,7 +281,7 @@ p > img {
   }
 
   img {
-    border-radius: 5px;
+    border-radius: 0.2em;
   }
 }
 
@@ -419,7 +412,7 @@ body:after {
 
 #bar {
     background: #000;
-    height: 7px;
+    height: 0.5em;
     background-size: cover;
     background-position: left 60%;
     position: fixed;
@@ -533,5 +526,5 @@ Modules - reusable parts of our design
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
-//@import "highlights";
+@import "highlights";
 @import "darcula";
